[package]
name = "poker-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
csv = "1.3.0"
num = "0.4.1"
serde = "1.0.194"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench1"
harness = false
