[package]
name = "poker-tracker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pt"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
chrono = {version = "0.4.31", features = ["serde"]}
clap = { version = "4.4.17", features = ["derive"] }
csv = "1.3.0"
num = "0.4.1"
serde = {version = "1.0.194", features = ["derive"]}

[dev-dependencies]
criterion = "0.5.1"
pretty_assertions = "1.4.0"

[[bench]]
name = "bench1"
harness = false
